--- a/TourManagement/DetailWindow.xaml
+++ b/TourManagement/DetailWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TourManagement"
         mc:Ignorable="d"
-        Title="Create Tour" Height="476" Width="940" WindowStartupLocation="CenterScreen">
+        Title="Create Tour" Height="476" Width="940" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
