--- a/TourManagement/App.xaml
+++ b/TourManagement/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TourManagement"
-             StartupUri="Login.xaml">
+             StartupUri="ViewTourDestination.xaml">
     <Application.Resources>
         <Style TargetType="Button">
             <Setter Property="Background" Value="Transparent" />
