--- a/TourManagement/ViewUser.xaml
+++ b/TourManagement/ViewUser.xaml
@@ -19,7 +19,7 @@
             </Grid.ColumnDefinitions>
             <TextBox x:Name="SearchTextBox" Margin="0,0,10,0" Padding="5" VerticalContentAlignment="Center" 
              />
-            <Button x:Name="SearchButton" Grid.Column="1" Content="Search" Padding="10,5"/>
+            <Button x:Name="SearchButton" Grid.Column="1" Content="Search" Padding="10,5" Click="SearchButton_Click_1"/>
         </Grid>
         <DataGrid x:Name="UserDataGrid" Grid.Row="1" Margin="0,0,0,20" 
           ColumnHeaderStyle="{StaticResource CustomDataGridColumnHeader}"
